--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,5 +52,4 @@ jobs:
         with:
           branch: deployCICD  # Deploy to the 'deployCICD' branch
           folder: dist        # Your build output directory
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}  # Use the GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets.SECRETTOKEN }}  # Use the GitHub token for authentication
