--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.SECRETTOKEN }} # Use the GitHub token for authentication
           publish_dir: dist/
+          publish_branch: deployCICD
